Prevent text wrapping

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -118,6 +118,7 @@
 						text-transform: uppercase;
 						letter-spacing: _font(letter-spacing);
 						font-size: 0.8rem;
+						white-space:nowrap;
 						border-bottom: 0;
 
 						&:hover {
